RTI-425 - fixed error about main element not being supported on IE

--- a/grid-packages/ag-grid-docs/documentation/src/layouts/index.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/layouts/index.module.scss
@@ -8,6 +8,10 @@ html {
     overflow-x: hidden;
 }
 
+main {
+    flex: 1 1 auto;
+}
+
 .main-container {
     composes: container-fluid p-0 d-flex flex-column from global;
     -webkit-font-smoothing: antialiased;
